// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Space Base 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`Storyshots Space Large 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 48,
        "width": 48,
      }
    }
  />
</View>
`;

exports[`Storyshots Space Medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 32,
        "width": 32,
      }
    }
  />
</View>
`;

exports[`Storyshots Space Micro 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`Storyshots Space Small 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
</View>
`;

exports[`Storyshots Space Tiny 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
</View>
`;

exports[`Storyshots Space XLarge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 64,
        "width": 64,
      }
    }
  />
</View>
`;
